# fastmcp_tutorial_auden_dev.to

./: .gitignore  LICENSE  README.md  install.sh  main.py  package-lock.json  package.json  pyproject.toml  run.sh
future_features/: main3.py  main_gemini.py
